--- a/modulo1 - html e css/desafio/index.html
+++ b/modulo1 - html e css/desafio/index.html
@@ -21,7 +21,7 @@
       <p>Os templos, como o Kinkaku-ji, e os jardins de cerejeiras em flor fazem da cidade um lugar mágico.</p>
       <p>Kyoto é também famosa pela sua cultura do chá e pelo distrito das gueixas, Gion.</p>
 
-  <h1 id="two">Maravilhas Naturais</h1>
+  <h1 class="green">Maravilhas Naturais</h1>
     <h2 class="green">Grand Canyon</h2>
       <p>O Grand Canyon, nos Estados Unidos, é uma das maiores e mais impressionantes formações naturais do mundo. Sua grandeza e beleza são de tirar o fôlego.</p>
       <p>Com suas cores vibrantes e formações rochosas únicas, o Grand Canyon é ideal para quem ama aventuras ao ar livre.</p>
@@ -35,7 +35,7 @@
       <p>Com suas águas cristalinas e vida marinha abundante, a Grande Barreira é um dos destinos mais populares para atividades subaquáticas.</p>
       <p>A preservação dessa maravilha natural é fundamental para manter a biodiversidade marinha.</p>
 
-  <h1 id="three">Cidades Vibrantes</h1>
+  <h1 class="orange">Cidades Vibrantes</h1>
     <h2 class="orange">Nova York</h2>
       <p>Nova York, a cidade que nunca dorme, é uma metrópole cheia de energia. Desde a Times Square até o Central Park, a cidade oferece algo para todos os gostos.</p>
       <p>O skyline de Nova York, com seus famosos arranha-céus, é uma das paisagens urbanas mais reconhecidas do mundo.</p>
@@ -49,7 +49,7 @@
       <p>A cidade também é famosa por sua vibrante vida noturna e sua gastronomia deliciosa e apimentada.</p>
       <p>Explorar os mercados flutuantes e os templos ao longo do rio Chao Phraya é uma experiência única.</p>
 
-  <h1 id="four">Experiências Culturais</h1>
+  <h1 class="purple">Experiências Culturais</h1>
     <h2 class="purple">Jerusalém</h2>
       <p>Jerusalém é uma cidade histórica com grande significado religioso para judeus, cristãos e muçulmanos. Seus locais sagrados, como o Muro das Lamentações e a Igreja do Santo Sepulcro, são importantes destinos espirituais.</p>
       <p>A cidade oferece uma rica herança cultural, com museus e mercados vibrantes.</p>
