--- a/modulo1 - html e css/aula 7 - global css/index.html
+++ b/modulo1 - html e css/aula 7 - global css/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de Receitas</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="colors.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/colors.css">
 </head>
 
 <body>
@@ -30,21 +30,21 @@
         <h2>Escolha uma Receita</h2>
 
         <div class="card-receita">
-            <img src="lanschool/imagens/bolochocolate.png" alt="Imagem Não Encontrada">
+            <img src="lanschool/imagens/bolochocolate.png" class="img1" alt="Imagem Não Encontrada">
             <h3>Bolo de Chocolate</h3>
-            <a href="">Ver Receita</a>
+            <a href="chocolate.html">Ver Receita</a>
         </div>
 
         <div class="card-receita">
-            <img src="lanschool/imagens/bolo-cenoura.png" alt="Imagem Não Encontrada">
+            <img src="lanschool/imagens/bolo-cenoura.png" class="img1" alt="Imagem Não Encontrada">
             <h3>Bolo de Cenoura</h3>
-            <a href="">Ver Receita</a>
+            <a href="cenoura.html">Ver Receita</a>
         </div>
 
         <div class="card-receita">
-            <img src="lanschool/imagens/strongonoff.png" alt="Imagem Não Encontrada">
+            <img src="lanschool/imagens/strongonoff.png" class="img1" alt="Imagem Não Encontrada">
             <h3>Strogonoof</h3>
-            <a href="">Ver Receita</a>
+            <a href="strogonoof.html">Ver Receita</a>
         </div>
 
     </main>
