--- a/painel.html
+++ b/painel.html
@@ -179,6 +179,7 @@
                 <ul>
                     <li><a href="Módulo 1 - HTML & CSS/aula 8 - table/form/index.html" target="_blank">Formulário</a></li>
                     <li><a href="Módulo 1 - HTML & CSS/aula 8 - table/tabelas/index.html" target="_blank">Tabelas</a></li>
+                    <li><a href="Módulo 1 - HTML & CSS/aula 8 - table/entrada/index.html" target="_blank">Entrada</a></li>
                 </ul>
             </div>
             <div class="card desafio-card">
