--- a/painel.html
+++ b/painel.html
@@ -113,6 +113,9 @@
             .card h3 {
                 font-size: 1rem;
             }
+            * {
+                <!--teste-->
+            }
         }
     </style>
 </head>
