--- a/painel.html
+++ b/painel.html
@@ -182,6 +182,18 @@
                     <li><a href="Módulo 1 - HTML & CSS/aula 8 - table/entrada/index.html" target="_blank">Entrada</a></li>
                 </ul>
             </div>
+            <div class="card">
+                <h3>Aula 9 - Media Screen</h3>
+                <ul>
+                    <li><a href="Módulo 1 - HTML & CSS/aula 9 - media/responsividade/index.html" target="_blank">Indisponivel</a></li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3>Aula 10 - FlexBox</h3>
+                <ul>
+                    <li><a href="Módulo 1 - HTML & CSS/aula 10 - flexbox/exercicio/index.html" target="_blank">Exercício</a></li>
+                </ul>
+            </div>
             <div class="card desafio-card">
                 <h3>Desafio Principal</h3>
                 <a href="Módulo 1 - HTML & CSS/desafio/index.html" target="_blank">Acessar Desafio</a>
