--- a/painel.html
+++ b/painel.html
@@ -194,9 +194,29 @@
                     <li><a href="Módulo 1 - HTML & CSS/aula 10 - flexbox/exercicio/index.html" target="_blank">Exercício</a></li>
                 </ul>
             </div>
+            <div class="card">
+                <h3>Aula 11 - Document.Get/h3>
+                <ul>
+                    <li><a href="Módulo 2 - JavaScript/aula 11 - node.js/variaveis/dom/index.html" target="_blank">Exercício</a></li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3>Aula 12 - EventListener</h3>
+                <ul>
+                    <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/index.html" target="_blank">Exercício</a></li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3>Aula 13 - Condições</h3>
+                <ul>
+                    <li><a href="Módulo 2 - JavaScript/aula 13 condições/condições/index.html" target="_blank">Exercício</a></li>
+                </ul>
+            </div>
             <div class="card desafio-card">
                 <h3>Desafio Principal</h3>
                 <a href="Módulo 1 - HTML & CSS/desafio/index.html" target="_blank">Acessar Desafio</a>
+                <a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafio01.html" target="_blank">Desafio 1 (Calcular Média)</a>
+                <a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafio02.html" target="_blank">Desafio 2 (Mostrar e Esconder)</a>
             </div>
         </div>
     </div>
