--- a/painel.html
+++ b/painel.html
@@ -191,25 +191,38 @@
             <div class="card">
                 <h3>Aula 10 - FlexBox</h3>
                 <ul>
-                    <li><a href="Módulo 1 - HTML & CSS/aula 10 - flexbox/exercicio/index.html" target="_blank">Exercício</a></li>
+                    <li><a href="Módulo 1 - HTML & CSS/aula 10 - flexbox/exercicio/index.html" target="_blank">Tela de Login</a></li>
                 </ul>
             </div>
             <div class="card">
-                <h3>Aula 11 - Document.Get/h3>
+                <h3>Aula 11 - Document.Get</h3>
                 <ul>
-                    <li><a href="Módulo 2 - JavaScript/aula 11 - node.js/variaveis/dom/index.html" target="_blank">Exercício</a></li>
+                    <li><a href="Módulo 2 - JavaScript/aula 11 - node.js/variaveis/dom/index.html" target="_blank">DOM</a></li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Aula 12 - EventListener</h3>
                 <ul>
-                    <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/index.html" target="_blank">Exercício</a></li>
+                    <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/index.html" target="_blank">EventListener</a></li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Aula 13 - Condições</h3>
                 <ul>
-                    <li><a href="Módulo 2 - JavaScript/aula 13 condições/condições/index.html" target="_blank">Exercício</a></li>
+                    <li><a href="Módulo 2 - JavaScript/aula 13 condições/condições/index.html" target="_blank">Calculadora</a></li>
+                </ul>
+                <ul>
+                    <li><a href="Módulo 2 - JavaScript/aula 13 condições/metodoPagamento/index.html" target="_blank">Método de Pagamento</a></li>
+                </ul>
+                <ul>
+                    <li><a href="Módulo 2 - JavaScript/aula 13 condições/calculoMedia/index.html" target="_blank">Calculo de Média</a></li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>Aula 14 - Arrays e Objetos</h3>
+                <ul>
+                    <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/index.html" target="_blank">Exercício</a></li>
                 </ul>
             </div>
             <div class="card desafio-card">
