--- a/painel.html
+++ b/painel.html
@@ -426,7 +426,8 @@
                 <ul>
                     <li><a href="Módulo 1 - HTML & CSS/aula 10 - flexbox/desafio/index.html" target="_blank">Tela de
                             Login</a></li>
-                    <li><a href="Módulo 1 - HTML & CSS/aula 10 - flexbox/exercicio/index.html" target="_blank">Flex-Direction</a></li>
+                    <li><a href="Módulo 1 - HTML & CSS/aula 10 - flexbox/exercicio/index.html"
+                            target="_blank">Flex-Direction</a></li>
                 </ul>
             </div>
         </div>
@@ -467,39 +468,62 @@
             <div class="card">
                 <h3>Aula 14 - Arrays e Objetos</h3>
                 <ul>
-                    <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/array.js"
-                            target="_blank">Array</a></li>
+                    <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/array.js" target="_blank">Array</a>
+                    </li>
                     <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/arrayObject.js"
                             target="_blank">ArrayObject</a></li>
-                    <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/loop.js"
-                            target="_blank">Loop</a></li>
-                    <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/objeto.js"
-                            target="_blank">Objeto</a></li>
-                </ul>
-            </div>
-            <div class="card desafio-card">
-                <h3>Desafio Principal</h3>
-                <ul>
-                    <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafioPrincipal.html"
-                            target="_blank">Desafio Principal (Calculadora Completa)</a></li>
-                </ul>
-                <ul>
-                    <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafio01.html"
-                            target="_blank">Desafio 1 (Calcular Média)</a></li>
-                </ul>
-                <ul>
-                    <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafio02.html"
-                            target="_blank">Desafio 2 (Mostrar e Esconder)</a></li>
+                    <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/loop.js" target="_blank">Loop</a></li>
+                    <li><a href="Módulo 2 - JavaScript/aula 14 - Arrays e Objetos/objeto.js" target="_blank">Objeto</a>
+                    </li>
                 </ul>
             </div>
         </div>
-    </div>
-    <footer>
-        <div class="container"
-            style="text-align: center; padding: 1rem 0; color: var(--text-secondary); font-size: 0.9rem;">
-            &copy;2025 Painel de Lógica de Programação - Matheus Lucindo dos Santos. Todos os direitos reservados.
+            <br><br>
+            <h2>Módulo 3 - PHP</h2>
+            <br>
+            <div class="cards">
+                <div class="card">
+                    <h3>Aula 15 - Introdução ao PHP</h3>
+                    <ul>
+                        <li><a href="Módulo 3 - PHP/Aula19Introducao/index.php" target="_blank">Introdução ao PHP</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h3>Aula 16 - Variáveis e Tipos de Dados</h3>
+                    <ul>
+                        <li><a href="Módulo 3 - PHP/Aula20VariaveisTiposDados/index.html" target="_blank">Variáveis e
+                                Tipos de Dados</a></li>
+                    </ul>
+                </div>
+
+                <div class="card desafio-card">
+                    <h3>Desafio Principal</h3>
+                    <ul>
+                        <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafioPrincipal.html"
+                                target="_blank">Desafio Principal (Calculadora Completa)</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafio01.html"
+                                target="_blank">Desafio 1 (Calcular Média)</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="Módulo 2 - JavaScript/aula 12 - EventListener/desafio/desafio02.html"
+                                target="_blank">Desafio 2 (Mostrar e Esconder)</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="Módulo 3 - PHP/Aula19Introducao/form/index.html" target="_blank">Desafio 3
+                                (Formulário)</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </footer>
+        <footer>
+            <div class="container"
+                style="text-align: center; padding: 1rem 0; color: var(--text-secondary); font-size: 0.9rem;">
+                &copy;2025 Painel de Lógica de Programação - Matheus Lucindo dos Santos. Todos os direitos reservados.
+            </div>
+        </footer>
 </body>
 
 </html>
