--- a/painel.html
+++ b/painel.html
@@ -418,7 +418,7 @@
                 <h3>Aula 9 - Media Screen</h3>
                 <ul>
                     <li><a href="Módulo 1 - HTML & CSS/aula 9 - media/responsividade/index.html"
-                            target="_blank">Indisponivel</a></li>
+                            target="_blank">Demonstração de Responsividade</a></li>
                 </ul>
             </div>
             <div class="card">
