Add list item for Aula 5 - Seletores link

--- a/painel.html
+++ b/painel.html
@@ -375,7 +375,8 @@
             </div>
             <div class="card">
                 <h3>Aula 5 - Seletores</h3>
-                <a href="Módulo 1 - HTML & CSS/aula 5 - seletores/index.html" target="_blank">Seletores</a>
+                <li><a href="Módulo 1 - HTML & CSS/aula 5 - seletores/index.html" target="_blank">Seletores</a>
+                </li>
             </div>
             <div class="card">
                 <h3>Aula 6 - Box Model</h3>
